Bug 86731 - [Qt][WK2] fast/events/page-visibility-iframe-move-test.html fails
Summary: [Qt][WK2] fast/events/page-visibility-iframe-move-test.html fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Qt (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 69554 79666
  Show dependency treegraph
 
Reported: 2012-05-17 07:37 PDT by Hugo Parente Lima
Modified: 2012-05-18 07:37 PDT (History)
5 users (show)

See Also:


Attachments
Patch (8.18 KB, patch)
2012-05-17 14:12 PDT, Hugo Parente Lima
no flags Details | Formatted Diff | Diff
Patch (8.16 KB, patch)
2012-05-18 07:04 PDT, Hugo Parente Lima
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hugo Parente Lima 2012-05-17 07:37:39 PDT
This tests was unskipped by http://trac.webkit.org/changeset/113235
( after implementing layoutTestController.setPageVisibility() )

But unfortunately it still fail.
Comment 1 Hugo Parente Lima 2012-05-17 14:12:48 PDT
Created attachment 142551 [details]
Patch
Comment 2 Simon Hausmann 2012-05-18 04:14:51 PDT
Makes sense to me. Jesus, do you remember why the page visibility was implemented on the page group instead of page?
Comment 3 Jesus Sanchez-Palencia 2012-05-18 06:37:24 PDT
(In reply to comment #2)
> Makes sense to me. Jesus, do you remember why the page visibility was implemented on the page group instead of page?

My mistake. It should only be applied to a page instead. His patch is correct.
Comment 4 Kenneth Rohde Christiansen 2012-05-18 06:38:44 PDT
Comment on attachment 142551 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=142551&action=review

> Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundle.cpp:245
> -void WKBundleSetPageVisibilityState(WKBundleRef bundleRef, WKBundlePageGroupRef pageGroupRef, int state, bool isInitialState)
> +void WKBundleSetPageVisibilityState(WKBundleRef bundleRef, WKBundlePageRef pageRef, int state, bool isInitialState)
>  {

You are changing bundle api, you need to bump the version somehow, I believe.
Comment 5 WebKit Review Bot 2012-05-18 06:47:39 PDT
Comment on attachment 142551 [details]
Patch

Rejecting attachment 142551 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2

Last 500 characters of output:
 1 with fuzz 3.
patching file Tools/WebKitTestRunner/InjectedBundle/LayoutTestController.cpp
patching file LayoutTests/ChangeLog
Hunk #1 succeeded at 1 with fuzz 3.
patching file LayoutTests/platform/qt-5.0-wk2/Skipped
Hunk #1 FAILED at 73.
1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/qt-5.0-wk2/Skipped.rej

Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Simon Haus..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/

Full output: http://queues.webkit.org/results/12728228
Comment 6 Hugo Parente Lima 2012-05-18 06:49:55 PDT
noooooo... I'll rebase and re-upload the patch.
Comment 7 Hugo Parente Lima 2012-05-18 07:04:25 PDT
Created attachment 142712 [details]
Patch
Comment 8 WebKit Review Bot 2012-05-18 07:37:29 PDT
Comment on attachment 142712 [details]
Patch

Clearing flags on attachment: 142712

Committed r117592: <http://trac.webkit.org/changeset/117592>
Comment 9 WebKit Review Bot 2012-05-18 07:37:34 PDT
All reviewed patches have been landed.  Closing bug.