[Qt][WK2] fast/events/page-visibility-iframe-move-test.html fails https://bugs.webkit.org/show_bug.cgi?id=86731

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2012-05-18
Reviewed by Simon Hausmann.

Source/WebKit2:

Set the page visibility on a single page instead of on all pages
from the page group.

* WebProcess/InjectedBundle/API/c/WKBundle.cpp:
(WKBundleSetPageVisibilityState):
* WebProcess/InjectedBundle/API/c/WKBundlePrivate.h:
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::setPageVisibilityState):
* WebProcess/InjectedBundle/InjectedBundle.h:
(InjectedBundle):

Tools:

Set the page visibility on a single page instead of on all pages
from the page group.

* WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
(WTR::LayoutTestController::setPageVisibility):
(WTR::LayoutTestController::resetPageVisibility):

LayoutTests:

Unskip fast/events/page-visibility-iframe-move-test.html.

* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/104492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117592 268f45cc-cd09-0410-ab3c-d52691b4dbfc