Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundle.cpp
@@ -241,7 +241,7 @@ bool WKBundleIsProcessingUserGesture(WKBundleRef)
     return InjectedBundle::isProcessingUserGesture();
 }
 
-void WKBundleSetPageVisibilityState(WKBundleRef bundleRef, WKBundlePageGroupRef pageGroupRef, int state, bool isInitialState)
+void WKBundleSetPageVisibilityState(WKBundleRef bundleRef, WKBundlePageRef pageRef, int state, bool isInitialState)
 {
-    toImpl(bundleRef)->setPageVisibilityState(toImpl(pageGroupRef), state, isInitialState);
+    toImpl(bundleRef)->setPageVisibilityState(toImpl(pageRef), state, isInitialState);
 }
